Scripts reorganized